Added HTML and opened CSS classes for initial commit

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,29 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
-  Welcome to the HTML Portfolio Project
+  <div class="header">
+    <h1>Sophia-Helene Mees de Tricht</h1>
+    <h2>Ruby on Rails Developer</h2>
+  </div>
+  <div class="tagline">
+    <h3>This is what I do</h3>
+  </div>
+  <div class="skills">
+    <h3>my skills</h3>
+    <p>I provide lean back-end apps with beautiful and intuitive front-end interfaces</p>
+    <ul>
+      <li>HTML</li>
+      <li>Ruby</li>
+      <li>Rails</li>
+      <li>coming soon: Python and Django!</li>
+    </ul>
+  </div>
+  <div class="contact">
+    <div class="content-wrapper">
+      <h3>How to contact me</h3>
+      <p>The best way to contact me is via LinkedIn: <a target="blank" href="https://www.linkedin.com/in/sophia-mees-de-tricht-a5122a11b/">Sophia-Helene Mees de Tricht</a></p>
+    </div>
+  </div>
 
 </body>
 </html>
